// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle Component Render Circle with CHANGING state 1`] = `
<div
  class="circle   changing"
  data-test="circle-element"
  data-testid="circle-element"
>
  <p
    class="text text_type_circle text_color_input letter"
    data-test="circle-letter"
  />
</div>
`;

exports[`Circle Component Render Circle with DEFAULT state 1`] = `
<div
  class="circle   default"
  data-test="circle-element"
  data-testid="circle-element"
>
  <p
    class="text text_type_circle text_color_input letter"
    data-test="circle-letter"
  />
</div>
`;

exports[`Circle Component Render Circle with MODIFIED state 1`] = `
<div
  class="circle   modified"
  data-test="circle-element"
  data-testid="circle-element"
>
  <p
    class="text text_type_circle text_color_input letter"
    data-test="circle-letter"
  />
</div>
`;

exports[`Circle Component Render Circle with head 1`] = `
<div
  class="text text_type_input text_color_input mb-4 absolute head string"
  data-test="head"
>
  head
</div>
`;

exports[`Circle Component Render Circle with index 1`] = `
<p
  class="text text_type_input text_color_input mt-4 absolute index"
>
  12
</p>
`;

exports[`Circle Component Render Circle with letters 1`] = `
<p
  class="text text_type_circle text_color_input letter"
  data-test="circle-letter"
>
  qwe
</p>
`;

exports[`Circle Component Render Circle with small class 1`] = `
<div
  class="circle  small default"
  data-test="circle-element"
  data-testid="circle-element"
>
  <p
    class="text text_type_circle text_color_input letter"
    data-test="circle-letter"
  />
</div>
`;

exports[`Circle Component Render Circle with tail 1`] = `
<div
  class="text text_type_input text_color_input mt-4 absolute tail30 string"
  data-test="tail"
>
  tail
</div>
`;

exports[`Circle Component Render Circle without props 1`] = `
<div
  class="content "
  data-test="circle-component"
  data-testid="circle-component"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
    data-test="head"
  />
  <div
    class="circle   default"
    data-test="circle-element"
    data-testid="circle-element"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-test="circle-letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-test="tail"
  />
</div>
`;
